--- a/params/Cargo.toml
+++ b/params/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 [dependencies]
 static_assertions = "1.1.0"
 bitfield = "0.13.2"
+heapless = "0.5.1"
+typenum = "*"
 
 [dependencies.byteorder]
 version = "1.3.2"
