--- a/template-box-controller/Cargo.toml
+++ b/template-box-controller/Cargo.toml
@@ -20,6 +20,10 @@ lto = true # Better optimizations
 [dependencies]
 cortex-m = "0.6"
 cortex-m-rt = "0.6"
+heapless = "0.5.1"
+
+[dependencies.params]
+path = "../params/"
 
 [dependencies.stm32f4xx-hal]
 default-features = false
