--- a/params/Cargo.toml
+++ b/params/Cargo.toml
@@ -14,6 +14,9 @@ typenum = "*"
 version = "1.3.2"
 default-features = false
 
+[dev-dependencies]
+pretty_assertions = "0.6.1"
+
 [dev-dependencies.approx]
 version = "0.3"
 default-features = false
