param-desc node_id gen

--- a/param-desc/paramdb.toml
+++ b/param-desc/paramdb.toml
@@ -2,8 +2,13 @@
 
 [[node]]
 id = 1
-name = "template_node"
-name = "Template Box Controller Node"
+name = "template_node1"
+desc = "Template Box Controller Node"
+
+[[node]]
+id = 2
+name = "template_node2"
+desc = "Template Box Controller Node"
 
 [[parameter]]
 id = 1
@@ -11,8 +16,8 @@ name = "example1"
 desc = "Some param 1"
 ro = true
 bcast = true
-value-type = "bool"
-value = false
+value_type = "bool"
+value = "false"
 
 [[parameter]]
 id = 2
@@ -20,8 +25,8 @@ name = "example2"
 desc = "Some param desc 2"
 ro = true
 bcast = true
-value-type = "u32"
-value = 1234
+value_type = "u32"
+value = "1234"
 
 [[parameter]]
 id = 2
@@ -29,4 +34,4 @@ name = "example2"
 desc = "Some param desc 2"
 #ro = true
 bcast = true
-value-type = "u32"
+value_type = "u32"
