--- a/template-box-controller/Cargo.toml
+++ b/template-box-controller/Cargo.toml
@@ -25,6 +25,9 @@ heapless = "0.5.2"
 [dependencies.params]
 path = "../params/"
 
+[dependencies.param-desc]
+path = "../param-desc/"
+
 [dependencies.stm32f4xx-hal]
 default-features = false
 features = ["rt", "stm32f429"]
